idocs-share/source/web/themes/citeckTheme/presentation.css
/* ... */
.yui-skin-citeckTheme #bd .div-filter .yuimenu .bd .yuimenuitem .yuimenuitemlabel {
   cursor: pointer;
}

.yui-skin-citeckTheme .items-list li, .yui-skin-citeckTheme #bd .div-filter .yuimenu .bd .yuimenuitem.yuimenuitem-selected {
   background-color: transparent;
}

.yui-skin-citeckTheme #bd .div-filter .yuimenu .yuimenuitem .yuimenuitemlabel {
   padding: 0;
   border-bottom: none;
}

.alfresco-share .items-list li.selected, 
.alfresco-share .items-list li.selected:hover,
.yui-skin-citeckTheme #bd .div-filter .yuimenu .bd .yuimenuitem-selected {
   color: #333;
   font-weight: normal;
}

.yui-skin-citeckTheme #bd .div-filter .yuimenu .bd {
   padding: 0;
   box-shadow: none;
}

.alfresco-share .items-list li:hover,
.yui-skin-citeckTheme .div-filter .yuimenuitem.yuimenuitem-selected {
   color: red !important;
   background-color: transparent;
}

.yui-skin-citeckTheme #bd .div-filter .yuimenu .bd .yuimenuitem.filter-selected,
.yui-skin-citeckTheme #bd .div-filter .yuimenu .bd .yuimenuitem.filter-selected:hover {
    background-color: #eee;
    border-bottom: 1px solid #eee;
}

.yui-skin-citeckTheme #bd .div-filter .yuimenu .bd .yuimenuitem.filter-selected a,
.yui-skin-citeckTheme #bd .div-filter .yuimenu .bd .yuimenuitem.filter-selected:hover a {
   cursor: default;
    color: #333;
}

.alfresco-share .toolbar > h2 {
   padding: 10px 10px 10px 40px;
   font-size: 100%;
   font-weight: bold;
   margin-left: 0;
   text-transform: uppercase;
   color: #333;
}

.yui-skin-citeckTheme .div-filter .yuimenuitem .yuimenuitemlabel {
    padding: 0;
}

.yui-skin-citeckTheme .div-filter .bd {
   box-shadow: none;
}

/* share-form */

.form-container .form-field, .form-fields .form-field {
   margin: 0 10px 10px 0;
}

.document-details-panel .form-container .form-fields {
   padding: 15px;
   margin: 0;
}


/* END CONTROLS */


/* Journal */

#bd #alfresco-journals {
   border-top: none;
}

.filter-criteria .criterion .criterion-predicate select,
.filter-criteria-table .criterion .criterion-predicate select {
  background-color: white;
}

.filter-criteria .criterion .criterion-value .criterion-value-field-input button,
.filter-criteria-table .criterion .criterion-value .criterion-value-field-input button {
  padding: 2px 10px;
  font-weight: 900;
  background-color: white;
  border: 2px solid #1c55da;
  color: #1c55da;
  cursor: pointer;
}

.filter-criteria .criterion .criterion-value .criterion-value-field-input button:hover,
.filter-criteria .criterion .criterion-value .criterion-value-field-input button:focus,
.filter-criteria-table .criterion .criterion-value .criterion-value-field-input button:hover,
.filter-criteria-table .criterion .criterion-value .criterion-value-field-input button:focus {
  color: white;
  background-color: #1c55da;
}

.filter-criteria .criterion .criterion-value .criterion-value-field-input button:disabled,
.filter-criteria-table .criterion .criterion-value .criterion-value-field-input button:disabled {
  color: #ccc;
  border-color: #ccc;
  background-color: white;
  cursor: default;
}


#alfresco-journals .toolbar.icon-buttons .yui-button.sidebar-toggle {
  display: none;
}

#alfresco-journals .toolbar.icon-buttons .yui-button.sidebar-toggle span.first-child button {
  background-image: none;
  width: 20px;
  height: 20px;
  padding: 0;
}

#alfresco-journals .toolbar.icon-buttons .yui-button.sidebar-toggle span.first-child button:before {
  font-family: FontAwesome;
  font-size: 20px;
  content: "\f0c9";
}


.yui-skin-citeckTheme .journal-container {
    height: 385px;
}

.yui-skin-citeckTheme .journal-container .journal {
    height: calc(100% - 31px);
}

.yui-skin-citeckTheme .journal-pagination {
    border-top: none;
}

.yui-skin-citeckTheme .journal-picker-page-container .full .filter-page,
.yui-skin-citeckTheme .journal-picker-page-container .create-page {
  height: 385px;
  overflow: auto;
}

/*  end journal */


/* card-details */

#bd .document-details-panel,
#bd .document-details-panel .panel-body {
   padding: 0;
   border: none;
}

#bd .document-details-panel .panel-body.doc-uploader {
  background-color: white;
}

#bd .document-details-panel.document-status .panel-body {
  color: #47b815;
}

/* end card-details */


.alfresco-twister {
   padding-left: 25px !important;
}


.clear {
    height: 0;
}

.form-container .viewmode-value {
   font-weight: 900;
}

.share-form .viewmode-field {
   margin: 0;
}


/* share-form */

.share-form {
  padding: 13px 15px;
  background: #f0f0f0;
}

[id*="profile"].share-form,
#bd > .share-form {
  padding-left: 27px;
}

.share-form .form-container {
   border: none; 
}

@media (min-width: 1010px) {
   .share-form .form-container .caption {
     position: absolute;
     left: 840px;
     text-align: left;
   }
}

.share-form .form-container .form-fields {
   padding: 0 1em !important;
   border-bottom: none;
}

.share-form .form-container .form-fields > .set {
   padding: 0;
}

.share-form .form-container .form-fields .set .set-title {
   border-bottom: 1px solid #ccc;
}

.share-form .form-container .form-fields .set:not(:first-child) .set-title {
   margin-top: 30px;
}


.share-form .form-container .form-fields .set-title {
  font-size: 16px;
  padding-bottom: 10px;
  margin-bottom: 15px;
  margin-top: 15px;
  border: none;
}

.share-form .form-container .form-fields .set-title.bold {
  font-weight: 900;
}

.share-form .form-container .form-fields .set-title.upcase {
  text-transform: uppercase;
}

.share-form .form-container .form-fields .set-title:empty {
   display: none;
}

.share-form .form-container .form-fields .form-field > label {
   float: left;
   padding: 0;
   line-height: 100%;
   margin: 8px 0 0 0; 
   position: relative;
   max-width: 40%;
}

.share-form .form-container .form-fields .form-field label.checkbox {
   max-width: none;
}

/* search field on forms */

.share-form .form-container .form-fields .form-field.search-field > label {
   margin: 0 0 10px 0;
   max-width: none;
}
/* ... */

